--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="/images/icon512.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json">
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="images/icon96.png">
+    <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
 </head>
 <body>
     <div class="calc">
